# devsql

./: Cargo.toml  README.md
.claude-plugin/: marketplace.json
crates/ccql/: README.md
crates/ccql/npm/: package.json
crates/ccql/npm/scripts/: install.js
crates/ccql/src/: main.rs
crates/ccql/src/cli/: commands.rs
crates/ccql/src/datasources/: history.rs  transcript.rs
crates/ccql/src/dedup/: mod.rs
crates/ccql/src/models/: stats.rs
crates/ccql/src/sql/: composite_storage.rs  mod.rs
crates/devsql/: Cargo.toml
crates/devsql/src/: engine.rs  lib.rs  main.rs
crates/devsql/src/providers/: ast_nodes.rs  imports.rs  mod.rs  source_files.rs  source_lines.rs  symbols.rs  tree_sitter.rs
crates/devsql/src/tools/: context.rs  diff.rs  history.rs  impact.rs  mod.rs  search.rs  semantic_diff.rs
crates/vcsql/npm/: package.json
crates/vcsql/npm/scripts/: install.js
crates/vcsql/tests/: cli.rs
examples/import-demo/: README.md
examples/import-demo/src/: index.ts
plugin/: README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: query.md
plugin/skills/devsql-querying/: SKILL.md
