[package]
name = "devsql"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Unified SQL queries across Claude Code + Git data"
repository = "https://github.com/douglance/devsql"
homepage = "https://github.com/douglance/devsql"
keywords = ["claude", "git", "sql", "productivity", "developer-tools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Workspace crates
ccql = { path = "../ccql", version = "0.2.1" }
vcsql = { path = "../vcsql", version = "0.2.1" }

# SQL engine - SQLite for unified queries
rusqlite.workspace = true

# Git access
git2.workspace = true

# CLI framework
incurs = { version = "0.1.0", default-features = false, features = ["cli"] }
async-trait = "0.1"

# Serialization
serde.workspace = true
serde_json.workspace = true

# Date/time handling
chrono.workspace = true

# Error handling
thiserror.workspace = true

# Async
tokio.workspace = true

# Utilities
dirs = "5.0"
walkdir.workspace = true
ignore.workspace = true
regex.workspace = true

# Tree-sitter (optional, for AST analysis)
tree-sitter = { workspace = true, optional = true }
tree-sitter-rust = { workspace = true, optional = true }
tree-sitter-typescript = { workspace = true, optional = true }
tree-sitter-javascript = { workspace = true, optional = true }
tree-sitter-python = { workspace = true, optional = true }
tree-sitter-go = { workspace = true, optional = true }
streaming-iterator = { workspace = true, optional = true }

[features]
tree-sitter-ast = [
    "dep:tree-sitter",
    "dep:tree-sitter-rust",
    "dep:tree-sitter-typescript",
    "dep:tree-sitter-javascript",
    "dep:tree-sitter-python",
    "dep:tree-sitter-go",
    "dep:streaming-iterator",
]

[[bin]]
name = "devsql"
path = "src/main.rs"

[lib]
name = "devsql"
path = "src/lib.rs"
